[gd_scene load_steps=11 format=2]

[ext_resource path="res://minigames/UI_Reusable/Start.tscn" type="PackedScene" id=1]
[ext_resource path="res://minigames/JigSaw Game/main/main.gd" type="Script" id=2]
[ext_resource path="res://minigames/UI_Reusable/Timer.tscn" type="PackedScene" id=3]
[ext_resource path="res://minigames/UI_Reusable/resultScrn.tscn" type="PackedScene" id=4]
[ext_resource path="res://minigames/UI_Reusable/SquareSelector.tscn" type="PackedScene" id=5]
[ext_resource path="res://minigames/UI_Reusable/GenericAnimations.tscn" type="PackedScene" id=6]
[ext_resource path="res://ui/Buttons/Salir.tscn" type="PackedScene" id=7]
[ext_resource path="res://minigames/UI_Reusable/Pause.tscn" type="PackedScene" id=8]
[ext_resource path="res://minigames/JigSaw Game/assets/background.png" type="Texture" id=9]
[ext_resource path="res://minigames/JigSaw Game/assets/background2.png" type="Texture" id=10]

[node name="main" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="TextureRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.462745, 0.658824, 0.462745, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="background2" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 10 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 9 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Start" parent="." instance=ExtResource( 1 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -90.0
margin_top = 12.0
margin_right = 90.0
margin_bottom = 192.0

[node name="Pause" parent="." instance=ExtResource( 8 )]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -150.0
margin_top = -150.0
margin_right = 0.0
margin_bottom = 0.0
rect_scale = Vector2( 0.7, 0.7 )

[node name="Salir" parent="." instance=ExtResource( 7 )]
margin_left = 50.0
margin_top = 50.0
margin_right = 200.0
margin_bottom = 200.0

[node name="Timer" parent="." instance=ExtResource( 3 )]
layer = 2

[node name="SelectBoards" parent="." instance=ExtResource( 5 )]

[node name="1" parent="SelectBoards" index="0"]
margin_left = 2000.0
margin_right = 2445.0
color = Color( 0.301961, 0.286275, 0.305882, 0.2 )

[node name="2" parent="SelectBoards" index="1"]
margin_left = 2449.0
margin_right = 2894.0
color = Color( 0, 0, 0, 0.2 )

[node name="3" parent="SelectBoards" index="2"]
margin_left = 3398.0
margin_right = 3844.0
color = Color( 1, 1, 1, 0 )

[node name="endGame" parent="." instance=ExtResource( 4 )]
visible = false

[node name="Results" parent="endGame/Panel" index="0"]
text = "Â¡Rompecabezas completado!"

[node name="Puntos" parent="endGame/Panel" index="1"]
visible = false

[node name="maxPuntos" parent="endGame/Panel" index="2"]
margin_left = 482.0
margin_top = 385.0
margin_right = 960.0
margin_bottom = 505.0
text = "120 segundos"

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" parent="." instance=ExtResource( 6 )]
[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Pause" to="." method="_on_Pause_pressed"]
[connection signal="pressed" from="Salir" to="." method="_on_Salir_pressed"]
[connection signal="pressed" from="SelectBoards/1/select_board1" to="." method="_on_select_board1_pressed"]
[connection signal="pressed" from="SelectBoards/2/select_board2" to="." method="_on_select_board2_pressed"]
[connection signal="pressed" from="SelectBoards/3/select_board3" to="." method="_on_select_board3_pressed"]
[connection signal="pressed" from="endGame/Panel/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="endGame/Panel/Button2" to="." method="_on_Button2_pressed"]

[editable path="SelectBoards"]

[editable path="endGame"]
